Revert "fix(theme): align nested sidebar border to parent caret center"
This reverts commit a8a9dbcfcbee754502bfb77fd702719c9687fc2f.

--- a/src/css/custom.scss
+++ b/src/css/custom.scss
@@ -534,7 +534,7 @@ html[data-theme="dark"] {
 .theme-doc-sidebar-menu {
   .theme-doc-sidebar-item-category {
     .menu__list-item-collapsible + .menu__list {
-      padding-left: 1.4rem;
+      padding-left: 1.1rem;
     }
 
     .theme-doc-sidebar-item-link {
